--- a/src/_layouts/text.njk
+++ b/src/_layouts/text.njk
@@ -163,7 +163,7 @@ layout: base
     {% endif %}
 
     <div class="donation-block">
-        <p>Alle Texte hier sind frei zugänglich. Wenn sie dir etwas geben, freue ich mich über eine kleine Unterstützung.</p>
+        <p>Alle Texte hier sind frei zugänglich. Wenn sie dir etwas geben, freue ich mich über eine Unterstützung.</p>
         <a href="https://paypal.me/JochenHornung1982" target="_blank" rel="noopener noreferrer" class="donation-button">Via PayPal unterstützen</a>
     </div>
 
