--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -6,21 +6,21 @@
     <title>{% if title %}{{ title }} - {% endif %}Jochen Hornung</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Raum für Menschlichkeit und Tiefe. Coaching, Texte und Gedanken von Jochen Hornung aus Berlin.">
+    <meta name="description" content="Raum für Menschlichkeit und Tiefe. Coaching, Werkzeuge und Texte von Jochen Hornung aus Berlin.">
     <meta name="author" content="Jochen Hornung">
 
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jochenhornung.de{{ page.url }}">
     <meta property="og:title" content="{% if title %}{{ title }} - {% endif %}Jochen Hornung">
-    <meta property="og:description" content="Raum für Menschlichkeit und Tiefe. Coaching, Texte und Gedanken von Jochen Hornung aus Berlin.">
+    <meta property="og:description" content="Raum für Menschlichkeit und Tiefe. Coaching, Werkzeuge und Texte von Jochen Hornung aus Berlin.">
     <meta property="og:image" content="https://jochenhornung.de/images/hero_for_SM_WA.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://jochenhornung.de{{ page.url }}">
     <meta name="twitter:title" content="{% if title %}{{ title }} - {% endif %}Jochen Hornung">
-    <meta property="twitter:description" content="Raum für Menschlichkeit und Tiefe. Coaching, Texte und Gedanken von Jochen Hornung aus Berlin.">
+    <meta property="twitter:description" content="Raum für Menschlichkeit und Tiefe. Coaching, Werkzeuge und Texte von Jochen Hornung aus Berlin.">
     <meta property="twitter:image" content="https://jochenhornung.de/images/hero_for_SM_WA.jpg">
 
     <!-- Favicons für alle Browser und Plattformen -->
